# polygons

./: CMakeLists.txt  Makefile  README.md
include/: bresenham.h  camera.h  clip_line.h  color_menu.h  crop_sutherland_hodgman.h  draw.h  extrusion.h  fill_polygon.h  font8x8.h  framebuffer.h  gl_app.h  lines.h  menu.h  polygon.h  renderer.h  shapes.h  transform.h  types.h
src/: bresenham.cpp  camera.cpp  clip_line.cpp  crop_sutherland_hodgman.cpp  draw.cpp  extrusion.cpp  fill_polygon.cpp  framebuffer.cpp  gl_app.cpp  lines.cpp  main.cpp  polygon.cpp  renderer.cpp  shapes.cpp
